[package]
name = "crud_actix_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
